// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse() caption with bold 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "content": Array [
              Object {
                "content": "I",
                "type": "lettering-bold",
              },
              Object {
                "content": " didn't mean ",
                "type": "text",
              },
              Object {
                "content": "that",
                "type": "lettering-bold",
              },
              Object {
                "content": "!",
                "type": "text",
              },
            ],
            "modifier": null,
            "type": "caption",
          },
          Object {
            "content": Array [
              Object {
                "content": "this is *not*",
                "type": "text",
              },
            ],
            "modifier": null,
            "type": "caption",
          },
        ],
        "number": 1,
        "type": "panel",
      },
    ],
    "number": 1,
    "type": "page",
  },
]
`;

exports[`parse() dialogue starts with bold 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "content": Array [
              Object {
                "content": "only bold",
                "type": "lettering-bold",
              },
            ],
            "modifier": null,
            "speaker": "bob",
            "type": "dialogue",
          },
          Object {
            "content": Array [
              Object {
                "content": "starts bold",
                "type": "lettering-bold",
              },
              Object {
                "content": " and then",
                "type": "text",
              },
            ],
            "modifier": null,
            "speaker": "bob",
            "type": "dialogue",
          },
        ],
        "number": 1,
        "type": "panel",
      },
    ],
    "number": 1,
    "type": "page",
  },
]
`;

exports[`parse() dialogue with bold 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "content": Array [
              Object {
                "content": "eat ",
                "type": "text",
              },
              Object {
                "content": "this",
                "type": "lettering-bold",
              },
              Object {
                "content": " not ",
                "type": "text",
              },
              Object {
                "content": "that",
                "type": "lettering-bold",
              },
              Object {
                "content": "!",
                "type": "text",
              },
            ],
            "modifier": null,
            "speaker": "bob",
            "type": "dialogue",
          },
          Object {
            "content": Array [
              Object {
                "content": "this is *not*",
                "type": "text",
              },
            ],
            "modifier": null,
            "speaker": "bob",
            "type": "dialogue",
          },
        ],
        "number": 1,
        "type": "panel",
      },
    ],
    "number": 1,
    "type": "page",
  },
]
`;

exports[`parse() kitchen sink 1`] = `
Array [
  Object {
    "key": "title",
    "type": "metadata",
    "value": "test",
  },
  Object {
    "key": "issue",
    "type": "metadata",
    "value": "1",
  },
  Object {
    "key": "by",
    "type": "metadata",
    "value": "the author",
  },
  Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "content": "Some characters stand around. And do stuff.",
            "type": "paragraph",
          },
          Object {
            "content": Array [
              Object {
                "content": "ok",
                "type": "text",
              },
            ],
            "modifier": null,
            "speaker": "bob",
            "type": "dialogue",
          },
          Object {
            "content": Array [
              Object {
                "content": "try it ",
                "type": "text",
              },
              Object {
                "content": "again",
                "type": "lettering-bold",
              },
            ],
            "modifier": null,
            "speaker": "bob",
            "type": "dialogue",
          },
        ],
        "number": 1,
        "type": "panel",
      },
      Object {
        "content": Array [
          Object {
            "content": "This is panel description.",
            "type": "paragraph",
          },
          Object {
            "content": "boom",
            "modifier": null,
            "type": "sfx",
          },
          Object {
            "content": Array [
              Object {
                "content": "yep",
                "type": "text",
              },
            ],
            "modifier": null,
            "type": "caption",
          },
        ],
        "number": 2,
        "type": "panel",
      },
    ],
    "number": 1,
    "type": "page",
  },
]
`;

exports[`parse() many blank lines 1`] = `
Array [
  Object {
    "content": Array [],
    "number": 1,
    "type": "page",
  },
  Object {
    "content": Array [],
    "number": 2,
    "type": "page",
  },
]
`;

exports[`parse() no blank lines 1`] = `
Array [
  Object {
    "content": Array [],
    "number": 1,
    "type": "page",
  },
  Object {
    "content": Array [],
    "number": 2,
    "type": "page",
  },
]
`;

exports[`parse() pages with panels 1`] = `
Array [
  Object {
    "content": Array [],
    "number": 1,
    "type": "page",
  },
  Object {
    "content": Array [
      Object {
        "content": Array [],
        "number": 1,
        "type": "panel",
      },
      Object {
        "content": Array [],
        "number": 2,
        "type": "panel",
      },
    ],
    "number": 2,
    "type": "page",
  },
]
`;

exports[`parse() pages with panels and lettering 1`] = `
Array [
  Object {
    "content": Array [],
    "number": 1,
    "type": "page",
  },
  Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "content": Array [
              Object {
                "content": "ok",
                "type": "text",
              },
            ],
            "modifier": null,
            "speaker": "bob",
            "type": "dialogue",
          },
          Object {
            "content": Array [
              Object {
                "content": "try it again",
                "type": "text",
              },
            ],
            "modifier": null,
            "speaker": "bob",
            "type": "dialogue",
          },
        ],
        "number": 1,
        "type": "panel",
      },
      Object {
        "content": Array [
          Object {
            "content": "This is panel description.",
            "type": "paragraph",
          },
          Object {
            "content": "boom",
            "modifier": null,
            "type": "sfx",
          },
          Object {
            "content": Array [
              Object {
                "content": "yep",
                "type": "text",
              },
            ],
            "modifier": null,
            "type": "caption",
          },
        ],
        "number": 2,
        "type": "panel",
      },
    ],
    "number": 2,
    "type": "page",
  },
]
`;

exports[`parse() single page 1`] = `
Array [
  Object {
    "content": Array [],
    "number": 1,
    "type": "page",
  },
]
`;

exports[`parse() two pages 1`] = `
Array [
  Object {
    "content": Array [],
    "number": 1,
    "type": "page",
  },
  Object {
    "content": Array [],
    "number": 2,
    "type": "page",
  },
]
`;
